--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
+    "api":"cd New folder && nodemon app.js ",
     "start:dev": "nodemon app.js",
-    "client": "npm start --prefix client",
+    "client": "cd client && npm start",
     "clientinstall": "npm install --prefix client",
-    "dev": "concurrently \"npm run start:dev\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run dist --prefix client"
+    "dev": "concurrently --kill-others-on-fail \"npm run api\" \"npm run client\"",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
