--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
-    "api":"cd New folder && nodemon app.js ",
     "start:dev": "nodemon app.js",
-    "client": "cd client && npm start",
+    "client": "npm start --prefix client",
     "clientinstall": "npm install --prefix client",
-    "dev": "concurrently --kill-others-on-fail \"npm run api\" \"npm run client\"",
-    "heroku-postbuild": "cd client && npm install && npm run build"
-  },
+    "dev": "concurrently \"npm run start:dev\" \"npm run client\""
+    },
   "author": "",
   "license": "ISC",
   "dependencies": {
